--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,1 +1,28 @@
-<p>nav works!</p>
+<nav class="navbar navbar-expand-lg text-white bg-dark">
+  <div class="container-fluid ">
+    <a class="navbar-brand" href="#"
+      ><img
+        src="../../../assets/images/download.png"
+        alt=""
+        class="logo"
+    /></a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link" routerLinkActive="active-link" routerLink="home">Home</a>
+        <a class="nav-link" routerLinkActive="active-link" routerLink="watch-list">Watch List</a>
+        <a class="nav-link" routerLinkActive="active-link" routerLink="plans">Plans</a>
+      </div>
+    </div>
+  </div>
+</nav>
