--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg text-white bg-dark">
+<nav class="nav-bar navbar navbar-expand-lg text-white bg-dark">
   <div class="container-fluid ">
     <a class="navbar-brand" href="#"
       ><img
