--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,11 @@
 <div class="setting"></div>
 <div class="btn-up"></div>
 <h1>Netflix</h1>
+<!-- 
+<div class="parent">
+    <div class="child"></div>
+</div> -->
+
+<!-- <div class="test"></div> -->
+
+<img src="../../../assets/images/download.png" alt="img-alt">
