--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -3,7 +3,7 @@
     height:75px;
     position: fixed;
     right: 0;
-    top: 150px;
+    top:400px;
     background-color: white;
     border-radius: 15%;
 }
@@ -26,6 +26,8 @@ h1{
 
     
 }
+
+//pesudo elements
 h1::after{
     content: "";
     width: 500px;;
@@ -48,4 +50,64 @@ h1::before{
     position: absolute;
     top: 0;
     left:0;
+}
+
+h1::selection{
+    color:black;
+    background-color: red;
+}
+
+// h1::first-letter{
+  
+// }
+
+.parent{
+    width: 400px;
+    height: 400px;
+    background-color: rgb(71, 187, 255);
+    
+}
+.child{
+    width: 100px;
+    height: 100px;
+    background-color:tomato;
+}
+
+//hover element
+.parent:hover .child{
+    background-color: green;
+    cursor: pointer;
+}
+
+.test{
+width: 200px;
+height: 200px;
+background-color: tomato;
+transition-property: width;
+transition-duration: 1s;
+transition-delay: 1s;
+//shorthand
+// transition: width 2s 1s ease;
+// transition-timing-function: cubic-bezier(0.1, 0.7, 1.0, 0.1);
+}
+
+.test:hover{
+   width:100%;
+  
+}
+
+img{
+    position: absolute;
+    right: 50%;
+    top: 50%;
+    // transform: rotate(50deg);
+    transition: all 1s;
+    transform-origin: top left;
+}
+img:hover{
+    transform: rotate(360deg);
+    // transform: scale(2) rotate(360deg);
+    // transform: scaleX();
+    // transform: translateY(100px);
+    // transform: skew(5deg); // slope
 }
