--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-nav></app-nav> <router-outlet></router-outlet>
+<app-nav></app-nav>
+
+<router-outlet></router-outlet>
+<app-side-menu></app-side-menu>
