side menu done. remove nav bar🌀

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,6 @@
-<div class="setting"></div>
+<!-- <div class="setting"></div>
 <div class="btn-up"></div>
-<!-- <h1>Netflix</h1> -->
-<!-- 
-<div class="parent">
-    <div class="child"></div>
-</div> -->
-
-<!-- <div class="test"></div> -->
+<h1>Netflix</h1> -->
+<div class="search">
+  <input type="text" placeholder="Search for movies, TV shows, genres, etc." />
+</div>
