--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,11 +1,11 @@
 <nav class="nav-bar navbar navbar-expand-lg text-white bg-dark">
-  <div class="container-fluid ">
-    <a class="navbar-brand" href="#"
+  <div class="container-fluid">
+    <!-- <a class="navbar-brand" href="#"
       ><img
         src="../../../assets/images/download.png"
         alt=""
         class="logo"
-    /></a>
+    /></a> -->
     <button
       class="navbar-toggler"
       type="button"
@@ -19,9 +19,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" routerLinkActive="active-link" routerLink="home">Home</a>
-        <a class="nav-link" routerLinkActive="active-link" routerLink="watch-list">Watch List</a>
-        <a class="nav-link" routerLinkActive="active-link" routerLink="plans">Plans</a>
+        <a class="nav-link" routerLinkActive="active-link" routerLink="home"
+          >Home</a
+        >
+        <a
+          class="nav-link"
+          routerLinkActive="active-link"
+          routerLink="watch-list"
+          >Watch List</a
+        >
+        <a class="nav-link" routerLinkActive="active-link" routerLink="plans"
+          >Plans</a
+        >
       </div>
     </div>
   </div>
