--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -1,11 +1,55 @@
 <section>
-<div class="side-menu-body">
-    <div >
-        <ul class="side-menu-items">
-            <li><a routerLinkActive="active-link" routerLink="home">Home</a></li>
-            <li><a routerLinkActive="active-link" routerLink="watch-list">Watch List</a></li>
-            <li><a routerLinkActive="active-link" routerLink="plans">Plans</a></li>
-        </ul>
+  <div class="side-menu-body">
+    <div class="side-menu-header">
+      <h1>Netflix<span id="main-title">.Remake</span></h1>
+      <span class="side-menu-titles">News feed</span>
     </div>
-</div>
+    <div>
+      <ul class="side-menu-feed-items">
+        <li routerLinkActive="active-link">
+          <span class="icons"> <i class="fa-solid fa-compass"></i></span>
+          <a routerLink="home">Home</a>
+        </li>
+        <li routerLinkActive="active-link">
+          <span class="icons"> <i class="fa-solid fa-film"></i></span>
+          <a routerLink="movies">Movies</a>
+        </li>
+        <li routerLinkActive="active-link">
+          <span class="icons"> <i class="fa-solid fa-video"></i></span>
+          <a>TV shows</a>
+        </li>
+        <li routerLinkActive="active-link">
+          <span class="icons"><i class="fa-solid fa-eye"></i></span>
+          <a routerLink="watch-list">Watchlist</a>
+        </li>
+        <li routerLinkActive="active-link">
+          <span class="icons"> <i class="fa-regular fa-clock"></i> </span>
+          <a>Coming soon</a>
+        </li>
+        <li routerLinkActive="active-link">
+          <span class="icons"> <i class="fa-solid fa-file-contract"></i></span>
+          <a routerLink="plans">Plans</a>
+        </li>
+        <hr />
+      </ul>
+    </div>
+
+    <div>
+      <ul class="side-menu-settings-items">
+        <span class="side-menu-titles">Privacy & Safety</span>
+        <li routerLinkActive="active-link">
+          <span class="icons"> <i class="fa-solid fa-user"></i></span>
+          <a routerLink="profile">Profile</a>
+        </li>
+        <li routerLinkActive="active-link">
+          <span class="icons"> <i class="fa-solid fa-cog"></i></span>
+          <a routerLink="settings">Settings</a>
+        </li>
+        <li routerLinkActive="active-link">
+          <span class="icons"> <i class="fa-solid fa-sign-out"></i></span>
+          <a routerLink="logout">Logout</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </section>
