--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -107,3 +107,25 @@
 //     // transform: skew(5deg); // slope
 // }
 */
+
+.card {
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .card img {
+    height: 250px;
+    object-fit: cover;
+  }
+  
+  .card-body {
+    background-color: #222;
+    color: white;
+    padding: 10px;
+  }
+  
+  .container {
+    max-width: 90%;
+  }
+  
