Login page design done💯
1.Using native CSS in design.
2.Adding login component.

--- a/src/app/components/plans/plans.component.html
+++ b/src/app/components/plans/plans.component.html
@@ -1,4 +1,4 @@
-<div class="menu">
+<!-- <div class="menu">
   <div class="menu-title">
     <span>New Menu</span>
     <h2>View Menu</h2>
@@ -45,4 +45,4 @@
     </div>
   </div>
   <div class="clearfix"></div>
-</div>
+</div> -->
