--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<!-- <div class="container mt-4">
     <div class="row">
       <div class="col-md-3 mb-4" *ngFor="let movie of movies">
         <div class="card h-100">
@@ -10,4 +10,4 @@
       </div>
     </div>
   </div>
-  
+   -->
