--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -1,47 +1,105 @@
-/* Align search field */
-.search-field input {
-  width: 265px;
-  height: 35px;
-  // border: 0.25px solid white;
-  color: white;
-  border-radius: 15px;
-  background-color: transparent;
-  padding-left: 10px;
-}
-
-/* Logo styling */
-.logo {
-  height: 40px;
-  border-radius: 50%;
-  border: 3.5px solid rgb(211, 37, 37);
-}
-
-/* Navbar Styling */
-.nav-bar {
-  margin-left: 100px;
-  margin-top: 30px;
-  padding: 15px 50px;
-  color: white;
-  display: flex;
-  justify-content: space-between; /* Moves search to left, logo & name to right */
-  align-items: center;
-}
-
-/* Move logo & name further right */
-.nav-items {
-  margin-left:180px; /* Shift more to the right */
-}
-
-/* Add space between logo and name */
-// .nav-items h3 {
-//   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-//   margin-right:  20px; 
-//   font-size: medium;/* Adds more spacing between logo and name */
+// /* Align search field */
+// .search-field input {
+//   width: 265px;
+//   height: 35px;
+//   // border: 0.25px solid white;
+//   color: white;
+//   border-radius: 15px;
+//   background-color: transparent;
+//   padding-left: 10px;
 // }
 
-/* Reduce placeholder font size */
-.search-field input::placeholder {
-  font-size: 12px; /* Adjust size */
-  color: rgba(255, 255, 255, 0.7); /* Light color */
+// /* Logo styling */
+// .logo {
+//   height: 40px;
+//   border-radius: 50%;
+//   border: 3.5px solid rgb(211, 37, 37);
+// }
+
+// /* Navbar Styling */
+// .nav-bar {
+//   margin-left: 100px;
+//   margin-top: 30px;
+//   padding: 15px 50px;
+//   color: white;
+//   display: flex;
+//   justify-content: space-between; /* Moves search to left, logo & name to right */
+//   align-items: center;
+// }
+
+// /* Move logo & name further right */
+// .nav-items {
+//   margin-left:180px; /* Shift more to the right */
+// }
+
+// /* Add space between logo and name */
+// // .nav-items h3 {
+// //   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+// //   margin-right:  20px; 
+// //   font-size: medium;/* Adds more spacing between logo and name */
+// // }
+
+// /* Reduce placeholder font size */
+// .search-field input::placeholder {
+//   font-size: 12px; /* Adjust size */
+//   color: rgba(255, 255, 255, 0.7); /* Light color */
+// }
+body {
+  margin: 0;
 }
+.header .header-content h1{
+margin: 0;
+}
+.header {
+  // background-color: #333;
+  // background-color: aquamarine;
+  color: white;
+}
+
+.header .nav-container{
+  padding: 15px 0;
+}
+.header .nav-container .cont{
+  width: 90%;
+  margin: auto;
+}
+
+.header .nav-container .logo{
+// background-color: white;
+float: left;
+}
+
+.header .nav-container .logo a {
+
+  color: #ff3036;
+  font-size: 35px;
+  font-weight: 900;
+}
+.header .nav-container .nav-links{
+float: right;
+}
+.header .nav-container .nav-links .active{
+  color: #ff3036  ;
+}
+
+.header .nav-container li{
+  list-style: none;
+  display: inline-block;
+  font-size: 25px;
+  font-weight: bold;
+  padding: 0  10px;
+}
+
+.header .nav-container li a {
+  color: rgb(0, 0, 0);
+}
+ .header .nav-container a{
+  text-decoration: none;
+
+ }
+.clear-fix{
+  clear: both;
+}
+
+
 
