--- a/src/app/components/plans/plans.component.scss
+++ b/src/app/components/plans/plans.component.scss
@@ -1,55 +1,55 @@
-.menu .item {
-  background-color: white;
-  width: 30%;
-  position: relative;
-  overflow: hidden;
-  float: left;
-}
+// .menu .item {
+//   background-color: white;
+//   width: 30%;
+//   position: relative;
+//   overflow: hidden;
+//   float: left;
+// }
 
-.menu .item:hover .caption {
-  opacity: 1;
-  transform: rotate(360deg);
-}
+// .menu .item:hover .caption {
+//   opacity: 1;
+//   transform: rotate(360deg);
+// }
 
-.menu .item img {
-  width: 100%;
-  transition: transform 1s 1s;
-}
+// .menu .item img {
+//   width: 100%;
+//   transition: transform 1s 1s;
+// }
 
-.menu .item .caption {
-  background-color: rgba(0, 0, 0, 0.7);
-  text-align: center;
-  color: #fff;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  opacity: 0;
-  transition: opacity 1s, transform 1s;
-}
+// .menu .item .caption {
+//   background-color: rgba(0, 0, 0, 0.7);
+//   text-align: center;
+//   color: #fff;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   bottom: 0;
+//   right: 0;
+//   opacity: 0;
+//   transition: opacity 1s, transform 1s;
+// }
 
-.menu .item .caption h3 {
-  background-color: rgb(159, 53, 53);
-  padding-block: 20px;
-  transform: translateX(140%);
-  transition: transform 1s 1.3s;
-}
+// .menu .item .caption h3 {
+//   background-color: rgb(159, 53, 53);
+//   padding-block: 20px;
+//   transform: translateX(140%);
+//   transition: transform 1s 1.3s;
+// }
 
-.menu .item .caption p {
-  padding-inline: 70px;
-  transform: translateX(100%);
-  transition: transform 1s 1.3s;
-}
+// .menu .item .caption p {
+//   padding-inline: 70px;
+//   transform: translateX(100%);
+//   transition: transform 1s 1.3s;
+// }
 
-.menu .item:hover img {
-  transform: scale(1.2);
-}
+// .menu .item:hover img {
+//   transform: scale(1.2);
+// }
 
-.menu .item:hover .caption h3 , .menu .item:hover .caption p {
-  transform: translateX(0);
-}
+// .menu .item:hover .caption h3 , .menu .item:hover .caption p {
+//   transform: translateX(0);
+// }
 
-.clearfix {
-  clear: both;
-}
+// .clearfix {
+//   clear: both;
+// }
