--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -1,4 +1,4 @@
-<section>
+<!-- <section>
   <div class="side-menu-body">
     <div class="side-menu-header">
       <h1>Netflix<span id="main-title">.Remake</span></h1>
@@ -52,4 +52,4 @@
       </ul>
     </div>
   </div>
-</section>
+</section> -->
