--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,10 @@
 <div class="login-form">
     <div class="cont">
-
+        <div class="overlay">
+        <!-- Logo -->
+        <div class="logo">
+          <h1>NE<span>TFL</span>IX</h1>
+        </div>
         <div class="form-body">
             <h2>Sign In</h2>
 
@@ -52,4 +56,5 @@
         </div>
 
     </div>
+</div>
 </div>
