--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,60 +1,61 @@
 <div class="login-form">
-    <div class="cont">
-        <div class="overlay">
-        <!-- Logo -->
-        <div class="logo">
-          <h1>NE<span>TFL</span>IX</h1>
-        </div>
-        <div class="form-body">
-            <h2>Sign In</h2>
-
-            <div class="form-inputs">
-                <div class="email">
-                    <!-- <label>Email</label> -->
-                    <input type="text" placeholder="Email or mobile number" />
-                </div>
-
-                <div class="password">
-                    <!-- <label>Password</label> -->
-                    <input type="password" placeholder="Password" />
-                    <span class="show-password cr"><i class="fa-solid fa-eye"></i></span>
-                </div>
-
-
-
-                <div class="signin-btn cr">
-                    <button type="submit" class="btn">Sign In</button>
-                </div>
-                <span class="or">OR</span>
-                <div class="signin-code cr">
-                    <button type="submit" class="btn">Use a Sign-In Code</button>
-                </div>
+  <div class="cont">
+    <div class="overlay">
+      <!-- Logo -->
+      <div class="logo">
+        <img src="../../../assets/images/Netflix_Logo_RGB.png" alt="" />
+      </div>
+      <div class="form-body">
+        <h2>Sign In</h2>
+        <form>
+          <div class="form-inputs">
+            <div class="email">
+              <!-- <label>Email</label> -->
+              <input type="text" placeholder="Email or mobile number" />
             </div>
 
-
-
-            <div class="forgot-password">
-                <a class="cr" href="#">Forgot password?</a>
+            <div class="password">
+              <!-- <label>Password</label> -->
+              <input type="password" placeholder="Password" />
+              <span class="show-password cr"
+                ><i class="fa-solid fa-eye"></i
+              ></span>
             </div>
 
-            <div class="remember-me">
-                <input class="remember-me cr" type="checkbox" />
-                <label>Remember me</label>
+            <div class="signin-btn cr">
+              <button type="submit" class="btn">Sign In</button>
             </div>
+            <span class="or">OR</span>
+            <div class="signin-code cr">
+              <button type="submit" class="btn">Use a Sign-In Code</button>
+            </div>
+          </div>
+        </form>
 
-            <div class="signup">
-                <p>New to Netflix? <a class="cr" href="#"> Sign up now</a></p>
-            </div>
-
-            <div class="warn-p">
-                <p>This page is protected by Google reCAPTCHA to ensure you're not a bot.</p>
-            </div>
-
-            <div class="learnmore">
-                <a class="cr" href="#">Learn more.</a>
-            </div>
+        <div class="forgot-password">
+          <a class="cr" href="#">Forgot password?</a>
         </div>
 
+        <div class="remember-me">
+          <input class="remember-me cr" type="checkbox" />
+          <label>Remember me</label>
+        </div>
+
+        <div class="signup">
+          <p>New to Netflix? <a class="cr" href="#"> Sign up now</a></p>
+        </div>
+
+        <div class="warn-p">
+          <p>
+            This page is protected by Google reCAPTCHA to ensure you're not a
+            bot.
+          </p>
+        </div>
+
+        <div class="learnmore">
+          <a class="cr" href="#">Learn more.</a>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
 </div>
