--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -19,12 +19,12 @@
     height: 100vh;
 }
 
-h1 {
-    transform: translate(20%, 40%);
-    color: red;
-    font-size: 40px;
-    font-weight: bold;
+
+.logo img{
+    width: 16%;
+    margin-left: 30px;
 }
+
 
 .login-form {
     height: 100vh;
