--- a/src/app/components/plans/plans.component.html
+++ b/src/app/components/plans/plans.component.html
@@ -1,48 +1,12 @@
-<!-- <div class="menu">
-  <div class="menu-title">
-    <span>New Menu</span>
-    <h2>View Menu</h2>
-  </div>
-
-  <div class="menu-content">
-    <div class="item">
-      <div>
-        <img src="../../../assets/images/download.png" alt="" />
-      </div>
-
-      <div class="caption">
-        <h3>Creamy Soup</h3>
-        <p>Delicious creamy soup with a touch of spice</p>
-      </div>
-
-    </div>
-  </div>
-
-  <div class="menu-content">
-    <div class="item">
-      <div>
-        <img src="../../../assets/images/download.png" alt="" />
-      </div>
-
-      <div class="caption">
-        <h3>Creamy Soup</h3>
-        <p>Delicious creamy soup with a touch of spice</p>
-      </div>
-      
-    </div>
-  </div>
-  <div class="menu-content">
-    <div class="item">
-      <div>
-        <img src="../../../assets/images/download.png" alt="" />
-      </div>
-
-      <div class="caption">
-        <h3>Creamy Soup</h3>
-        <p>Delicious creamy soup with a touch of spice</p>
-      </div>
-      
-    </div>
-  </div>
-  <div class="clearfix"></div>
-</div> -->
+<div class="parent">
+  <div class="child child-1h2">child-1</div>
+  <div class="child child-2h2">child-2</div>
+  <div class="child child-3h2">child-3</div>
+  <div class="child child-4h2">child-4</div>
+  <div class="child child-5h2">child-5</div>
+  <div class="child child-6h2">child-6</div>
+  <div class="child child-6h2">child-6</div>
+  <div class="child child-6h2">child-6</div>
+  <div class="child child-6h2">child-6</div>
+  <div class="child child-6h2">child-6</div>
+</div>
