plans component design almost done🎆

--- a/src/app/components/land-page/land-page.component.scss
+++ b/src/app/components/land-page/land-page.component.scss
@@ -139,23 +139,23 @@
 }
 
 // style for curved div // two section separator
-.sperator {
-    background-color: #090e22;
-    height: 100px;
-    width: 100%;
-    border-radius: 50% 50% 0 0;
-    position: relative;
-    bottom: 12%;
-    z-index: 2;
-    box-shadow: inset 2px 1px 10px #455fbe;
-    border: 6px solid #790626;
-}
+// .sperator {
+//     background-color: #090e22;
+//     height: 100px;
+//     width: 100%;
+//     border-radius: 50% 50% 0 0;
+//     position: relative;
+//     bottom: 12%;
+//     z-index: 2;
+//     box-shadow: inset 2px 1px 10px #455fbe;
+//     border: 6px solid #790626;
+// }
 
 .second-section {
     overflow: hidden;
 }
 
-//secont section
+//second section
 .trending-now {
     border-top: 6px solid #790626;
     //   background-color: rgb(0, 0, 0);
