--- a/src/app/components/plans/plans.component.html
+++ b/src/app/components/plans/plans.component.html
@@ -1,12 +1,159 @@
-<div class="parent">
-  <div class="child child-1h2">child-1</div>
-  <div class="child child-2h2">child-2</div>
-  <div class="child child-3h2">child-3</div>
-  <div class="child child-4h2">child-4</div>
-  <div class="child child-5h2">child-5</div>
-  <div class="child child-6h2">child-6</div>
-  <div class="child child-6h2">child-6</div>
-  <div class="child child-6h2">child-6</div>
-  <div class="child child-6h2">child-6</div>
-  <div class="child child-6h2">child-6</div>
-</div>
+<section>
+  <div class="cont">
+    <div class="header">
+      <div class="logo">
+        <img src="../../../assets/images/Netflix_Logo_RGB.png" alt="" />
+      </div>
+
+      <div class="sign-out">
+        <button>Sign Out</button>
+      </div>
+    </div>
+    <hr />
+
+    <div class="plans-cards-container">
+      <!-- <span class="plans-title">STEP 2 OF 3</span> -->
+      <h2 class="plans-title">Choose the plan that’s right for you</h2>
+
+      <div class="plans">
+        <!-- basic -->
+        <div class="plan-card basic-plan">
+          <!-- plan name -->
+          <div class="plan-name">
+            <h3>Basic</h3>
+            <h6>720p</h6>
+          </div>
+          <!-- plan features -->
+          <div class="plan-features">
+            <div class="feat feat1">
+              <span>Monthly price</span>
+              <h6>EGP 100</h6>
+            </div>
+            <hr />
+
+            <div class="feat feat2">
+              <span>Video and sound quality</span>
+              <h6>GOOD</h6>
+            </div>
+            <hr />
+
+            <div class="feat feat3">
+              <span>Resolution</span>
+              <h6>720p (HD)</h6>
+            </div>
+            <hr />
+
+            <div class="feat feat4">
+              <span>Supported devices</span>
+              <h6>TV, computer, mobile phone, tablet</h6>
+            </div>
+            <hr />
+
+            <div class="feat feat5">
+              <span>Devices your household can watch at the same time</span>
+              <h6>1</h6>
+            </div>
+            <hr />
+
+            <div class="feat feat6">
+              <span>Download devices </span>
+              <h6>1</h6>
+            </div>
+          </div>
+        </div>
+        <!-- standard  -->
+        <div class="plan-card standard-plan">
+          <!-- plan name -->
+          <div class="plan-name">
+            <h3>Standard</h3>
+            <h6>1080p</h6>
+          </div>
+          <!-- plan features -->
+          <div class="plan-features">
+            <div class="feat feat1">
+              <span>Monthly price</span>
+              <h6>EGP 170</h6>
+            </div>
+            <hr />
+
+            <div class="feat feat2">
+              <span>Video and sound quality</span>
+              <h6>GREAT</h6>
+            </div>
+            <hr />
+
+            <div class="feat feat3">
+              <span>Resolution</span>
+              <h6>1080p (Full HD)</h6>
+            </div>
+            <hr />
+
+            <div class="feat feat4">
+              <span>Supported devices</span>
+              <h6>TV, computer, mobile phone, tablet</h6>
+            </div>
+            <hr />
+
+            <div class="feat feat5">
+              <span>Devices your household can watch at the same time</span>
+              <h6>2</h6>
+            </div>
+            <hr />
+
+            <div class="feat feat6">
+              <span>Download devices </span>
+              <h6>2</h6>
+            </div>
+          </div>
+        </div>
+
+        <!-- premium -->
+        <div class="plan-card premium-plan">
+          <!-- plan name -->
+          <div class="plan-name">
+            <h3>Premium</h3>
+            <h6>4K + HDR</h6>
+          </div>
+          <!-- plan features -->
+          <div class="plan-features">
+            <div class="feat feat1">
+              <span>Monthly price</span>
+              <h6>EGP 240</h6>
+            </div>
+            <hr />
+
+            <div class="feat feat2">
+              <span>Video and sound quality</span>
+              <h6>Best</h6>
+            </div>
+            <hr />
+
+            <div class="feat feat3">
+              <span>Resolution</span>
+              <h6>4K (Ultra HD) + HDR</h6>
+            </div>
+            <hr />
+
+            <div class="feat feat4">
+              <span>Supported devices</span>
+              <h6>TV, computer, mobile phone, tablet</h6>
+            </div>
+            <hr />
+
+            <div class="feat feat5">
+              <span>Devices your household can watch at the same time</span>
+              <h6>4</h6>
+            </div>
+            <hr />
+
+            <div class="feat feat6">
+              <span>Download devices </span>
+              <h6>6</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button class="next-btn">Next</button>
+    </div>
+  </div>
+</section>
